idf_component_register( SRCS 
                            "main.c" 
                            "ble_spp_client.c" 
                            "joystick.c"
                            "packet.c"
                            "max17048.c"
                            "leds.c"
                        INCLUDE_DIRS 
                            "." )